# ese519_final_project

./: .gitignore  CMakeLists.txt  README.md  audio.c  audio.h  audio_generator.c  config.h  debug.c  decide_clk.py  frequency.c  main.c  music.h  piano.c  pwm_pio.c  read.c  record.c  replayMode.c  save.c  test.c
lcd/: CMakeLists.txt  DEV_Config.h  main.c  show_music.c  show_music.h  st7735_driver.c
lcd/pico-sdk/src/rp2_common/boot_stage2/: bs2_default_padded_checksummed.S
resources/: audio.h  music.h  notes_1.h  notes_2.h  notes_3.h
st7735_driver/: DEV_Config.c  music_pictures.h  st7735_driver.h
trash/: audio.c  piano.c  pwm_pio.c  record.c  save.c
utils/: audio_generator.c  audio_generator.h  convertor.ipynb  frequency.c  game_mode.c  game_mode.h  play.h  play_mode.c  pwm_utils.c  pwm_utils.h  replay_mode.c  sl_utils.c  sl_utils.h
zrx_543_driver/: zrx543_driver.c  zrx543_driver.h
